feat(Titlebar): Options redesign and script open fixes.

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -2,7 +2,7 @@
 
 .bp4-tooltip2 .bp4-popover2-content {
 	background: @container-fg-color-bright;
-	color: @text-color;
+	color: @button-text-color;
 	border-radius: @border-radius;
 }
 
@@ -17,7 +17,7 @@
 
 .button-primary {
 	background: @button-color-primary !important;
-	color: @text-color;
+	color: @button-text-color !important;
 	&:hover {
 		background: @button-color-secondary !important;
 	}
@@ -25,18 +25,18 @@
 
 .button-secondary {
 	background: @container-bg-color;
-	color: @text-color;
+	color: @button-text-color;
 
 	&:hover {
 	}
 }
 
 .button-link {
-	color: @text-color !important;
+	color: @button-text-color !important;
 }
 
 .button-link-danger {
-	color: @text-color !important;
+	color: @button-text-color !important;
 	&:hover {
 		background-color: @button-color-danger !important;
 	}
