--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -10,21 +10,31 @@
 // @primary-tint-7: #0a1028;
 // @primary-tint-8: #060a21;
 
+// old - Jul 17
+// @white-tint-1: #e2e6f8;
+// @white-tint-2: #d7dcf4;
+// @primary-tint-1: #455576;
+// @primary-tint-2: #324165;
+// @secondary-tint-1: #222b45;
+// @secondary-tint-2: #18203b;
+// @secondary-tint-3: #111731;
+// @secondary-tint-4: #0a1028;
+
 @small-font-size: 0.8rem;
 @medium-font-size: 1rem;
 @large-font-size: 1.2rem;
 @massive-font-size: 2rem;
 
-@white-tint-1: #e2e6f8;
-@white-tint-2: #d7dcf4;
+@white-tint-1: #fffffe;
+@white-tint-2: #a7a9be;
 
-@primary-tint-1: #455576;
-@primary-tint-2: #324165;
+@primary-tint-1: #72757e;
+@primary-tint-2: #72757e;
 
-@secondary-tint-1: #222b45;
-@secondary-tint-2: #18203b;
-@secondary-tint-3: #111731;
-@secondary-tint-4: #0a1028;
+@secondary-tint-1: #69696e;
+@secondary-tint-2: #30303a;
+@secondary-tint-3: #16161a;
+@secondary-tint-4: #16161a;
 
 @success: #16825d;
 @success-tint-1: #199c6e;
@@ -41,14 +51,15 @@
 @container-fg-color: @secondary-tint-2;
 @container-fg-color-bright: @secondary-tint-1;
 
-@button-color-primary: @primary-tint-1;
+@button-text-color: black;
+@button-color-primary: #cc9c49;
 @button-color-secondary: @primary-tint-2;
 @button-color-danger: @danger;
 
 @outline-color: @secondary-tint-4;
 @shadow-color: black;
-@box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-@border-radius: 5px;
+@box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+@border-radius: 0.25rem;
 
 @scrollbar-bg-color: transparent;
 @scrollbar-thumb-color: @primary-tint-2;
