--- a/src/components/dialogs/styles.less
+++ b/src/components/dialogs/styles.less
@@ -6,3 +6,13 @@
 		width: 100%;
 	}
 }
+
+.database-list {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	max-width: 60%;
+	margin: auto;
+	gap: 1rem;
+}
