feat(css): Color pallete #1

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -19,7 +19,7 @@
 	background: @button-color-primary !important;
 	color: @button-text-color !important;
 	&:hover {
-		background: @button-color-secondary !important;
+		background: @button-color-primary-hover !important;
 	}
 }
 
@@ -43,19 +43,9 @@
 }
 
 .button-success {
-	background: @success;
-
-	&:hover {
-		background: @success-tint-1;
-	}
 }
 
 .button-danger {
-	background: @button-color-danger;
-
-	&:hover {
-		background: @button-color-danger;
-	}
 }
 
 .button-text-size-small {
