--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -5,7 +5,8 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	background-color: @container-fg-color;
+	background-color: @container-bg-color;
+	border-top: 1px solid @outline-color;
 	color: @text-color;
 
 	@container-width: 75%;
