--- a/src/components/browser/styles.less
+++ b/src/components/browser/styles.less
@@ -8,7 +8,7 @@
 	min-width: 0;
 	width: 100%;
 	height: 100%;
-	background-color: @container-fg-color;
+	background-color: @container-bg-color;
 
 	.tabs-container {
 		width: 100%;
@@ -46,6 +46,9 @@
 			align-items: center;
 			overflow: hidden;
 			user-select: none;
+			border-top: 0.5px solid @outline-color;
+			border-right: 0.5px solid @outline-color;
+
 			.tab-title {
 				flex-grow: 1;
 				min-width: 0;
@@ -64,7 +67,8 @@
 
 		.tab-active {
 			box-shadow: @box-shadow;
-			background-color: @container-fg-color !important;
+			// background-color: @container-fg-color;
+			border-bottom: 2px solid @highlight-color;
 		}
 	}
 }
