--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -23,7 +23,6 @@
 	height: 35px;
 	background: @container-bg-color;
 	color: @text-color;
-	border-bottom: 1px solid @outline-color;
 
 	.header-container {
 		display: flex;
@@ -48,5 +47,6 @@
 		justify-content: center;
 		align-items: center;
 		width: 3.5rem;
+		border-right: 1px solid @outline-color;
 	}
 }
