--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -106,11 +106,9 @@
 		gap: 20px;
 	}
 
-	.button-advanced {
-		padding: 20px 20px;
-		font-size: @large-font-size;
-		font-weight: 400;
-		text-align: center;
+	.button-row {
+		display: flex;
+		justify-content: space-between;
 	}
 
 	.horizontal-line {
