feat(tabs): Hide overflow-x

--- a/src/components/browser/styles.less
+++ b/src/components/browser/styles.less
@@ -22,7 +22,7 @@
 			justify-content: start;
 			align-items: end;
 			min-height: 36px;
-			overflow-x: auto;
+			overflow-x: hidden;
 			background-color: @container-bg-color;
 		}
 
