feat(style): More rem changes

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -1,18 +1,7 @@
 @import "../styles/variables.less";
 
-.bp4-tooltip2 .bp4-popover2-content {
-	background: @container-fg-color-bright;
-	color: @button-text-color;
-	border-radius: @border-radius;
-}
-
 .button-base {
 	border-radius: @border-radius;
-}
-
-.button-icon-wrapper {
-	display: flex !important;
-	padding: 4px;
 }
 
 .button-primary {
@@ -50,12 +39,15 @@
 
 .button-text-size-small {
 	font-size: @small-font-size;
+	height: 1.5rem;
 }
 
 .button-text-size-medium {
 	font-size: @medium-font-size;
+	height: 2rem;
 }
 
 .button-text-size-large {
 	font-size: @large-font-size;
+	height: 2rem;
 }
