--- a/src/common/styles/layout.less
+++ b/src/common/styles/layout.less
@@ -2,23 +2,9 @@
 
 .flex-inline {
 	display: flex;
-	gap: 20px;
+	gap: 1.5rem;
 }
 
 .flex-fill {
 	flex-grow: 1;
-}
-
-.flex-inline-end {
-	&:extend(.flex-inline);
-	justify-content: flex-end;
-}
-
-.flex-block {
-	&:extend(.flex-inline);
-	flex-direction: column;
-}
-
-.padding-min {
-	padding: 20px;
 }
