--- a/src/components/explorer/styles.less
+++ b/src/components/explorer/styles.less
@@ -18,7 +18,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	font-weight: 500;
-	line-height: 17px;
+	line-height: @line-height;
 	letter-spacing: 0em;
 	text-align: left;
 }
@@ -45,7 +45,7 @@
 	color: rgba(0, 0, 0, 0.65);
 	cursor: pointer;
 	font-weight: normal;
-	line-height: 22px;
+	line-height: @line-height;
 	margin: 0;
 	padding: 5px 12px;
 	transition: all 0.3s;
