--- a/src/components/connection-controller/styles.less
+++ b/src/components/connection-controller/styles.less
@@ -1,7 +1,6 @@
 @import "../../common/styles/variables.less";
 
 .connection-manager {
-	min-width: 160px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -32,24 +31,20 @@
 		.title {
 			font-size: @large-font-size;
 		}
-
-		.buttons {
-			display: flex;
-			gap: 4px;
-		}
 	}
 
 	.list {
 		display: flex;
 		flex-direction: column;
 		flex-grow: 1;
-
 		min-height: 0;
-		min-width: 99%;
+		width: 100%;
 		margin: auto;
 
 		overflow-y: scroll;
 		overflow-x: hidden;
+
+		font-size: @small-font-size;
 
 		gap: 1rem;
 
@@ -95,7 +90,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			gap: 4px;
+			gap: 0.5rem;
 		}
 
 		&:last-child {
@@ -112,7 +107,6 @@
 	background-color: @container-bg-color;
 	box-shadow: @box-shadow;
 	border-radius: @border-radius;
-	transition: all 0.3s;
 
 	.card-title {
 		display: flex;
@@ -121,7 +115,7 @@
 		.title {
 			display: flex;
 			align-items: center;
-			gap: 8px;
+			gap: 0.5rem;
 			font-size: @medium-font-size;
 		}
 
@@ -136,14 +130,14 @@
 		display: flex;
 		max-height: 4rem;
 
-		transition: all 1s;
+		transition: max-height 1s;
 
 		.cell {
 			display: flex;
 			flex-direction: column;
 			min-width: 40%;
 			gap: 0.5rem;
-			padding: 4px;
+			padding: 0.5rem;
 
 			.cell-title {
 				color: @subtext-color;
@@ -165,6 +159,6 @@
 
 	.card-buttons {
 		display: flex;
-		gap: 4px;
+		gap: 0.5rem;
 	}
 }
