--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -20,7 +20,7 @@
 	align-items: center;
 	flex-direction: row;
 	width: 100%;
-	height: 35px;
+	min-height: 2.5rem;
 	background: @container-bg-color;
 	color: @text-color;
 
@@ -39,7 +39,7 @@
 
 	.header-item {
 		-webkit-app-region: no-drag;
-		padding: 4px;
+		padding: 0.25rem;
 	}
 
 	.logo {
