--- a/src/index.less
+++ b/src/index.less
@@ -22,6 +22,11 @@
 			white-space: pre-wrap;
 		}
 	}
+
+	&:focus {
+		outline: none !important;
+		box-shadow: @input-box-shadow !important;
+	}
 }
 
 *::-webkit-scrollbar {
@@ -48,11 +53,6 @@ html {
 	display: flex;
 	height: 100%;
 	width: 100%;
-
-	*:focus {
-		outline: 0;
-		box-shadow: @input-box-shadow !important;
-	}
 }
 
 body {
@@ -76,7 +76,7 @@ pre {
 	overflow: auto;
 	overflow-y: hidden;
 	font-size: @medium-font-size;
-	line-height: 20px;
+	line-height: @line-height;
 	border: 1px solid #777;
 	background: transparent repeat 0 0;
 }
