feat(style): More rem changes

--- a/src/common/components/Dialog.less
+++ b/src/common/components/Dialog.less
@@ -2,14 +2,14 @@
 
 .modal {
 	a {
-		gap: 4px;
+		gap: 0.25rem;
 		color: @link-color !important;
 		&:hover {
 			color: @text-color !important;
 		}
 	}
 
-	padding-bottom: 8px;
+	padding-bottom: 0.5rem;
 	background-color: @container-bg-color;
 	color: @text-color;
 	height: 100%;
@@ -26,7 +26,7 @@
 	}
 
 	.content {
-		padding: 8px 8px;
+		padding: 0.5rem 0.5rem;
 		overflow-y: auto;
 		height: 100%;
 	}
@@ -34,15 +34,15 @@
 	.footer {
 		display: flex;
 		justify-content: flex-end;
-		padding: 8px;
+		padding: 0.5rem;
 	}
 }
 
 .small {
-	width: 600px;
+	width: 40rem;
 }
 
 .large {
-	width: 1000px;
-	height: 500px;
+	width: 70rem;
+	height: 35rem;
 }
