--- a/src/common/styles/bp4-override.less
+++ b/src/common/styles/bp4-override.less
@@ -6,6 +6,18 @@
 		border-radius: @border-radius;
 	}
 
+	.bp4-icon {
+		color: @text-color !important;
+	}
+
+	.bp4-label {
+		font-size: @small-font-size;
+	}
+
+	.bp4-form-helper-text {
+		font-size: @small-font-size !important;
+	}
+
 	.bp4-control-group {
 		align-items: center;
 	}
