--- a/src/components/shell/styles.less
+++ b/src/components/shell/styles.less
@@ -3,10 +3,5 @@
 .export-options {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
-}
-
-.export-suboptions {
-	display: flex;
-	gap: 20px;
+	gap: 1.5rem;
 }
