--- a/src/components/sidebar/styles.less
+++ b/src/components/sidebar/styles.less
@@ -15,20 +15,16 @@
 		align-items: center;
 		text-align: center;
 		width: 100%;
-		height: 50px;
+		height: 3.5rem;
 		color: @text-color;
 		cursor: pointer;
 
-		* {
-			color: @text-color;
-		}
-
 		.icon {
-			padding: 6px 0px;
+			padding: 1rem 0.25rem;
 		}
 
 		.initials {
-			padding: 10px 4px;
+			padding: 1rem 0.25rem;
 		}
 	}
 }
