feat(style): Tooltip moved a little down. Tag styling. Font size changes to rem.

--- a/src/common/styles/bp4-override.less
+++ b/src/common/styles/bp4-override.less
@@ -6,6 +6,13 @@
 		border-radius: @border-radius;
 	}
 
+	.bp4-tag {
+		background-color: @container-fg-color;
+		color: @text-color;
+		font-size: @small-font-size;
+		border-radius: @border-radius !important;
+	}
+
 	.bp4-icon {
 		color: @text-color !important;
 	}
@@ -30,11 +37,13 @@
 	.bp4-input {
 		background-color: @container-fg-color;
 		color: @text-color;
+		font-size: @small-font-size;
 		height: 2rem;
 	}
 
 	.bp4-input-group.bp4-small .bp4-input {
 		height: 1.5rem;
+		font-size: @small-font-size;
 	}
 
 	.bp4-file-upload-input::after {
