--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
+	font-size: @small-font-size;
 
 	.help-text {
 		// text-align: center;
@@ -19,6 +20,7 @@
 	flex-direction: column;
 	flex-grow: 1;
 	min-height: 0;
+	font-size: @small-font-size;
 
 	@result-viewer-header-height: 3rem;
 
