feat(style): rem changes

--- a/src/common/styles/bp4-override.less
+++ b/src/common/styles/bp4-override.less
@@ -38,11 +38,11 @@
 		background-color: @container-fg-color;
 		color: @text-color;
 		font-size: @small-font-size;
-		height: 2rem;
+		height: 1.5rem !important;
 	}
 
-	.bp4-input-group.bp4-small .bp4-input {
-		height: 1.5rem;
+	.bp4-input-group .bp4-small .bp4-input {
+		height: 1.25rem !important;
 		font-size: @small-font-size;
 	}
 
