--- a/src/index.less
+++ b/src/index.less
@@ -15,7 +15,7 @@
 		background-color: @container-fg-color-bright !important;
 		color: @text-color !important;
 
-		padding: 4px !important;
+		padding: 0.25rem !important;
 
 		&.multi-line {
 			display: block;
@@ -82,7 +82,7 @@ pre {
 }
 
 .resize-handle {
-	@handle-size: 6px;
+	@handle-size: 0.25rem;
 
 	border-radius: @border-radius;
 
