--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -58,19 +58,19 @@
 		min-height: 0;
 		gap: 0.5rem;
 		/* To even out the margin-right on the header (.header) */
-		padding-left: 10px;
+		padding-left: 1rem;
 
-		@tree-view-header-height: 32px;
+		@tree-view-header-height: 2rem;
 
 		.header {
 			min-height: @tree-view-header-height;
 
-			padding: 6px;
+			padding: 0.5rem;
 			border-radius: @border-radius;
 			background-color: @container-bg-color;
 
 			/* To accomodate the overflow below the header (.content) */
-			margin-right: 10px;
+			margin-right: 1rem;
 		}
 
 		.content {
@@ -79,38 +79,39 @@
 			display: flex;
 			flex-direction: column;
 			flex-grow: 0;
-			padding: 6px;
+			padding: 0.5rem;
 			background-color: @container-bg-color;
 			border-radius: @border-radius;
 
 			height: calc(
-				100% - (@tree-view-header-height + @result-viewer-header-height + 8px)
+				100% -
+					(@tree-view-header-height + @result-viewer-header-height + 0.25rem)
 			);
 
 			.document-header-buttons {
 				display: flex;
 				* {
-					padding: 4px;
+					padding: 0.25rem;
 				}
 			}
 		}
 
 		.content-row {
-			@content-row-modified-width: 30px;
+			@content-row-modified-width: 2rem;
 
 			display: flex;
 			flex-grow: 1;
 			justify-content: start;
 			align-items: center;
-			padding-top: 2px;
+			padding-top: 0.25rem;
 
-			min-height: 34px;
+			min-height: 1.5rem;
 
 			.key-delete {
-				height: 34px;
+				height: 1.5rem;
 				display: flex;
 				align-items: center;
-				padding: 4px 8px;
+				padding: 0.25rem 0.5rem;
 			}
 
 			.button-container {
@@ -119,12 +120,11 @@
 
 			.left {
 				width: 50%;
-				height: 34px;
+				height: 1.5rem;
 				display: flex;
 				align-items: center;
-				padding: 4px 8px;
-				border-radius: @border-radius;
-				border: 1px solid @outline-color;
+				padding: 0.25rem 0.5rem;
+				border-bottom: 1px solid @outline-color;
 				&:focus,
 				&:active,
 				&:hover {
@@ -134,12 +134,11 @@
 
 			.right {
 				width: 50%;
-				height: 34px;
+				height: 1.5rem;
 				display: flex;
 				align-items: center;
-				padding: 4px 8px;
-				border-radius: @border-radius;
-				border: 1px solid @outline-color;
+				padding: 0.25rem 0.5rem;
+				border-bottom: 1px solid @outline-color;
 				&:focus,
 				&:active,
 				&:hover {
@@ -160,7 +159,7 @@
 			display: flex;
 			flex-grow: 1;
 			align-items: center;
-			gap: 8px;
+			gap: 0.5rem;
 
 			span {
 				cursor: pointer;
@@ -191,20 +190,20 @@
 				flex-direction: row;
 				align-items: center;
 				width: 100%;
-				height: 34px;
+				height: 2rem;
 				border-radius: @border-radius;
 				background-color: @container-fg-color;
 				border: 1px solid @outline-color;
 
 				.handle {
-					padding: 2px;
-					margin: 2px;
+					padding: 0.25rem;
+					margin: 0.25rem;
 				}
 
 				&.primary {
 					background-color: @container-fg-color;
-					padding: 4px;
-					height: 38px;
+					padding: 0.25rem;
+					height: 2rem;
 					&:hover {
 						background-color: @container-fg-color-bright;
 					}
@@ -226,8 +225,8 @@
 			}
 
 			.panel {
-				padding-left: 8px;
-				padding-bottom: 8px;
+				padding-left: 0.5rem;
+				padding-bottom: 0.5rem;
 			}
 		}
 	}
@@ -238,7 +237,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		padding-left: 8px;
+		padding-left: 0.5rem;
 		div {
 			border-radius: @border-radius !important;
 		}
