feat(monaco): Styling to new color pallete.

--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,6 @@
 @import "./common/styles/variables.less";
 @import "./common/styles/bp4-override.less";
+@import "./common/styles/monaco-override.less";
 
 :root {
 	font-weight: 500;
@@ -82,7 +83,7 @@ pre {
 }
 
 .resize-handle {
-	@handle-size: 0.25rem;
+	@handle-size: 0.33rem;
 
 	border-radius: @border-radius;
 
