--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -184,6 +184,8 @@
 			border-radius: @border-radius;
 			background-color: @container-bg-color;
 
+			gap: 0.15rem;
+
 			.item {
 				cursor: pointer;
 				display: flex;
