--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -11,9 +11,9 @@
 
 // Color definitions
 
-@primary-color: #7251d8;
+@primary-color: #6749c2;
 @secondary-color: #313741;
-@highlight-color: #7f5af0;
+@highlight-color: #8e74e0;
 
 @background-color: #10141a;
 @background-color-2: #1a212c;
