--- a/src/common/styles/bp4-override.less
+++ b/src/common/styles/bp4-override.less
@@ -15,6 +15,8 @@
 
 	.bp4-icon {
 		color: @text-color !important;
+		font-size: @small-font-size !important;
+		padding: 0.1rem;
 	}
 
 	.bp4-label {
