--- a/src/components/explorer/styles.less
+++ b/src/components/explorer/styles.less
@@ -86,3 +86,28 @@
 .NodeIcon {
 	margin: -0.3rem;
 }
+
+.NodeHover {
+	padding-left: 0;
+	border-radius: 0.25rem !important;
+}
+
+.bp4-tree-node-content-0:hover:extend(.NodeHover) {
+	margin-left: 0;
+	width: 100%;
+}
+
+.bp4-tree-node-content-1:hover:extend(.NodeHover) {
+	margin-left: 23px;
+	width: 92%;
+}
+
+.bp4-tree-node-content-2:hover:extend(.NodeHover) {
+	margin-left: 46px;
+	width: 86%;
+}
+
+.bp4-tree-node-content-3:hover:extend(.NodeHover) {
+	margin-left: 46px;
+	width: 80%;
+}
