feat(TreeViewer): Slightly better button states when interacting in edit mode. feat(Editor): Header sizing changed.

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -5,6 +5,10 @@
 	padding: 5px 10px !important;
 }
 
+.button-disabled {
+	color: @subtext-color !important;
+}
+
 .button-primary {
 	background: @button-color-primary !important;
 	color: @button-text-color !important;
