--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -21,6 +21,7 @@
 	flex-grow: 1;
 	min-height: 0;
 	font-size: @small-font-size;
+	padding-right: 0.5rem;
 
 	@result-viewer-header-height: 3rem;
 
@@ -31,7 +32,7 @@
 		align-items: center;
 		justify-content: flex-end;
 		min-height: @result-viewer-header-height;
-		padding: 0.25rem 0.5rem;
+		padding: 0.25rem 0.25rem;
 		width: 100%;
 
 		.header-item {
@@ -64,13 +65,10 @@
 
 		.header {
 			min-height: @tree-view-header-height;
-
 			padding: 0.5rem;
+			margin-right: 0.33rem; // same width as the scrollbar in :root
 			border-radius: @border-radius;
-			background-color: @container-bg-color;
-
-			/* To accomodate the overflow below the header (.content) */
-			margin-right: 1rem;
+			background-color: @container-fg-color;
 		}
 
 		.content {
@@ -79,7 +77,6 @@
 			display: flex;
 			flex-direction: column;
 			flex-grow: 0;
-			padding: 0.5rem;
 			background-color: @container-bg-color;
 			border-radius: @border-radius;
 
@@ -103,9 +100,8 @@
 			flex-grow: 1;
 			justify-content: start;
 			align-items: center;
-			padding-top: 0.25rem;
 
-			min-height: 1.5rem;
+			min-height: 2.5rem;
 
 			.key-delete {
 				height: 1.5rem;
@@ -120,30 +116,17 @@
 
 			.left {
 				width: 50%;
-				height: 1.5rem;
 				display: flex;
 				align-items: center;
 				padding: 0.25rem 0.5rem;
-				border-bottom: 1px solid @outline-color;
-				&:focus,
-				&:active,
-				&:hover {
-					background-color: @container-fg-color-bright;
-				}
 			}
 
 			.right {
 				width: 50%;
-				height: 1.5rem;
 				display: flex;
 				align-items: center;
 				padding: 0.25rem 0.5rem;
-				border-bottom: 1px solid @outline-color;
-				&:focus,
-				&:active,
-				&:hover {
-					background-color: @container-fg-color-bright;
-				}
+				cursor: pointer;
 			}
 
 			.modified {
@@ -152,6 +135,12 @@
 				height: 100%;
 				align-items: center;
 				width: @content-row-modified-width;
+			}
+
+			&:focus,
+			&:active,
+			&:hover {
+				background-color: @container-fg-color-bright;
 			}
 		}
 
@@ -174,6 +163,10 @@
 				display: flex;
 				flex-grow: 1;
 				align-items: center;
+				gap: 1rem;
+				.bp4-icon {
+					color: @subtext-color !important;
+				}
 			}
 		}
 
@@ -182,9 +175,7 @@
 			flex-direction: column;
 			width: 100%;
 			border-radius: @border-radius;
-			background-color: @container-bg-color;
-
-			gap: 0.15rem;
+			background-color: @container-fg-color;
 
 			.item {
 				cursor: pointer;
@@ -192,10 +183,9 @@
 				flex-direction: row;
 				align-items: center;
 				width: 100%;
-				height: 2rem;
 				border-radius: @border-radius;
-				background-color: @container-fg-color;
-				border: 1px solid @outline-color;
+				background-color: @container-bg-color;
+				border: 2px solid @outline-color;
 
 				.handle {
 					padding: 0.25rem;
@@ -203,9 +193,8 @@
 				}
 
 				&.primary {
-					background-color: @container-fg-color;
 					padding: 0.25rem;
-					height: 2rem;
+					background-color: @container-bg-color;
 					&:hover {
 						background-color: @container-fg-color-bright;
 					}
@@ -227,8 +216,7 @@
 			}
 
 			.panel {
-				padding-left: 0.5rem;
-				padding-bottom: 0.5rem;
+				background-color: @container-fg-color;
 			}
 		}
 	}
