--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -112,7 +112,7 @@
 
 	color: @text-color;
 
-	@editor-height: 2rem;
+	@editor-height: 2.5rem;
 
 	.editor-header {
 		display: flex;
@@ -124,12 +124,13 @@
 		padding-right: 1rem;
 		padding-left: 1rem;
 
+		gap: 0.25rem;
+
 		.editor-header-item {
 			height: 100%;
 			display: flex;
 			justify-content: space-evenly;
 			align-items: center;
-			padding: 0px 0.25rem;
 		}
 	}
 
