feat(Connections): active state checking on load feat(style):Pageheader options popover and context menu styling.

--- a/src/components/layout/styles.less
+++ b/src/components/layout/styles.less
@@ -50,3 +50,10 @@
 		border-right: 1px solid @outline-color;
 	}
 }
+
+.encryption-dialog-content {
+	p {
+		text-align: center;
+		font-style: italic;
+	}
+}
