--- a/src/common/styles/bp4-override.less
+++ b/src/common/styles/bp4-override.less
@@ -1,4 +1,11 @@
 :root {
+	.bp4-popover2 .bp4-popover2-content,
+	.bp4-menu {
+		background: @container-fg-color;
+		color: @text-color;
+		border-radius: @border-radius;
+	}
+
 	.bp4-tooltip2 .bp4-popover2-content {
 		font-size: @small-font-size;
 		background: @container-fg-color;
