--- a/src/components/sidebar/styles.less
+++ b/src/components/sidebar/styles.less
@@ -20,11 +20,11 @@
 		cursor: pointer;
 
 		.icon {
-			padding: 1rem 0.25rem;
+			height: 25px;
+			width: 25px;
 		}
 
 		.initials {
-			padding: 1rem 0.25rem;
 		}
 	}
 }
