--- a/src/components/explorer/styles.less
+++ b/src/components/explorer/styles.less
@@ -17,9 +17,6 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
-	font-weight: 500;
-	letter-spacing: 0rem;
-	text-align: left;
 }
 
 .explorer-header-title {
@@ -39,10 +36,15 @@
 	height: 100%;
 	width: 100%;
 
+	padding: 0.75rem;
+
 	overflow-y: scroll;
 	overflow-x: hidden;
 
 	font-size: @medium-font-size;
+
+	border-radius: @border-radius;
+	background-color: @container-bg-color;
 }
 
 .explorer-loading {
