--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,6 @@
 @import "common/styles/variables.less";
 @import "@blueprintjs/popover2/lib/css/blueprint-popover2.css";
+@import "@blueprintjs/datetime/lib/css/blueprint-datetime.css";
 @import "@blueprintjs/datetime2/lib/css/blueprint-datetime2.css";
 @import "@blueprintjs/select/lib/css/blueprint-select.css";
 @import "@blueprintjs/core/lib/css/blueprint.css";
