--- a/src/components/onboarding/styles.less
+++ b/src/components/onboarding/styles.less
@@ -7,20 +7,20 @@
 	flex-direction: column;
 	height: 100%;
 	width: 35rem;
+	gap: 0.75rem;
 	color: @text-color;
 	background-color: @container-bg-color;
 
 	.text-row {
 		color: @subtext-color;
 
-		opacity: 75%;
+		opacity: 70%;
 
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 		align-items: center;
 
-		width: 75%;
-		gap: 3rem;
+		width: 60%;
 
 		.text-row-key {
 			font-size: @large-font-size;
