feat(ConnectionForm) : Pending changes * Refactored into smaller components * TLS fixes

--- a/src/common/styles/bp4-override.less
+++ b/src/common/styles/bp4-override.less
@@ -45,6 +45,11 @@
 	.bp4-input {
 		background-color: @container-fg-color;
 		color: @text-color;
+		font-size: @medium-font-size;
+		max-height: 15rem;
+	}
+
+	.editor .bp4-input {
 		font-size: @small-font-size;
 		height: 1.5rem !important;
 	}
