feat(feedback): Added doorbell.io * custom styled * option in titlebar options

--- a/src/common/components/Button.less
+++ b/src/common/components/Button.less
@@ -62,3 +62,10 @@
 	font-size: @large-font-size;
 	height: 2rem;
 }
+
+#doorbell-submit-button {
+	&:extend(.button-base,
+	.button-primary,
+	.button-outlined,
+	.button-text-size-large);
+}
