--- a/src/index.less
+++ b/src/index.less
@@ -100,3 +100,43 @@ pre {
 		background-color: @container-fg-color-bright !important;
 	}
 }
+#doorbell-background {
+	background: @background-color;
+	opacity: 0.7;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+	filter: alpha(opacity=70);
+	-khtml-opacity: 0.7;
+	-moz-opacity: 0.7;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 99998;
+	display: none;
+}
+
+#doorbell {
+	#doorbell-title,
+	#doorbell-feedback {
+		color: @text-color;
+		background-color: @background-color;
+	}
+
+	#doorbell-feedback {
+		border: 1px solid @outline-color;
+	}
+
+	form {
+		padding: 10px 20px 15px;
+		background: @background-color;
+		margin: 0;
+		border: 1px solid @outline-color;
+		-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+		border-radius: 5px;
+		-moz-box-shadow: 5px 5px 5px 0 @background-color;
+		-webkit-box-shadow: 5px 5px 5px 0 @background-color;
+		box-shadow: 5px 5px 5px 0 @background-color;
+	}
+}
