chore(prettier, husky): Prettier config changes and format. Husky added.

--- a/src/components/panes/editor/result-viewer/styles.less
+++ b/src/components/panes/editor/result-viewer/styles.less
@@ -81,10 +81,7 @@
 			background-color: @container-bg-color;
 			border-radius: @border-radius;
 
-			height: calc(
-				100% -
-					(@tree-view-header-height + @result-viewer-header-height + 0.25rem)
-			);
+			height: calc(100% - (@tree-view-header-height + @result-viewer-header-height + 0.25rem));
 
 			.document-header-buttons {
 				display: flex;
