--- a/src/index.less
+++ b/src/index.less
@@ -9,8 +9,7 @@
 
 * {
 	code {
-		font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-			monospace !important;
+		font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace !important;
 
 		border-radius: @border-radius !important;
 		background-color: @container-fg-color-bright !important;
