--- a/src/common/styles/variables.less
+++ b/src/common/styles/variables.less
@@ -47,5 +47,4 @@
 // Full CSS Properties
 
 @box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-@input-box-shadow: inset 0 0 0 1px shade(@highlight-color, 50%),
-	0 0 0 1px shade(@highlight-color, 60%);
+@input-box-shadow: inset 0 0 0 1px shade(@highlight-color, 50%), 0 0 0 1px shade(@highlight-color, 60%);
